--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,9 @@
     --font-primary: #4B6A9B;
     --font-secondary: #2B3442;
     --btn-color: #0079FF;
+    --btn-font: #FFFFFF;
     --hover-color: #2B3442;
+    --box-shadow: #697C9A30;
 
 }
 
@@ -25,38 +27,46 @@
 
 html {
     height: 100%;
+    background-color: var(--bg-color);
 }
 
 body {
     min-height: 100%;
     font-weight: 400;
-    font-size: 0.9375rem;
+    font-size: 0.8125rem;
     line-height: 1.5625rem;
 
-    background-color: var(--bg-color);
-    color: var(--font-color);
+    color: var(--font-primary);
+}
+
+.main-container {
+    margin: 2rem 1.5rem;
 }
 
 h1 {
     font-weight: 700;
     font-size: 1.625rem;
     line-height: 2.375rem;
+
+    color: var(--font-secondary);
 }
 
 h2 {
     font-weight: 700;
-    font-size: 1.375rem;
+    font-size: 1rem;
     line-height: 2.0625rem;
+
+    color: var(--font-secondary);
 }
 
 h3 {
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 0.8125rem;
     line-height: 1.5rem;
 }
 
 h4 {
     font-weight: 400;
-    font-size: 0.8125rem;
+    font-size: 0.6875rem;
     line-height: 1.25rem;
 }
