--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -56,15 +56,77 @@
     flex-direction: column;
 }
 
+a {
+    font-weight: 400;
+    font-size: 0.6875rem;
+    line-height: 1.25rem;
+    color: var(--font-primary);
+    text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+
+}
+
 .social {
     display: flex;
     flex-direction: row;
+}
+
+.img-container {
+    width: 1.25rem;
+    margin-right: 0.8125rem;
+}
+
+.social .map {
+    width: 0.859rem;
+    height: 1.25rem;
+}
+
+.social .website, .company {
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.social .twitter {
+    width: 1.25rem;
+    height: 1rem;
 }
 
 .social:not(:last-child) {
     margin-bottom: 1rem;
 }
 
-.social-img {
-    margin-right: 1.2rem;
+/* tablet styles */
+@media only screen and (min-width: 768px) {
+
+    .profile {
+        padding: 2.5rem;
+    }
+
+    .profile-banner {
+        margin-bottom: 1.5rem;
+    }
+
+    .avatar-image {
+        height: 7.3125rem;
+        width: 7.3125rem;
+        border-radius: 3.5rem;
+        margin-right: 2.5rem;
+    }
+
+    .profile-body {
+        margin-bottom: 2rem;
+    }
+
+    .profile-stats {
+        margin-bottom: 1.875rem;
+    }
+
+    .profile-socials {
+        display: grid;
+       grid-template-columns: 50% 50%;
+    }
+
 }
