--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -130,3 +130,18 @@ a:hover {
     }
 
 }
+
+@media only screen and (min-width: 992px) {
+    .profile-body {
+        margin-left: 10rem;
+    }
+
+    .profile-stats {
+        margin-left: 10rem;
+    }
+
+    .profile-socials {
+        margin-left: 10rem;
+    }
+   
+}
