--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,3 +94,10 @@ h4 {
         font-size: 0.8125rem;
     }
 }
+
+@media only screen and (min-width: 992px) {
+
+    .main-container {
+        margin: 9rem 12rem;
+    }
+}
